--- a/src/content.html
+++ b/src/content.html
@@ -3,6 +3,17 @@
   <head>
     <!--characterset UTF-8 Watch this: https://youtu.be/MijmeoH9LT4 -->
 
+    <script>
+  window.dataLayer = window.dataLayer ||[];
+  function gtag()
+  gtag('consent','default',{
+    'ad_storage':'denied',
+    'analytics_storage':'denied',
+    'personalization_storage':'denied'
+  });
+  gtag("set", "ads_data_redaction", true);
+</script>
+    
     <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
