Added Cookies Consent

--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,77 @@
             </div>
         </div>
     </main>
+<div class="cookie-consent">
+    <p>This website uses cookies to improve your experience. By clicking <b>Agree</b>, you consent to our use of cookies in accordance with our <a href="privacy_policy.html">Privacy Policy</a>.</p><button id="consent-button"> I Agree</button>
+  </div>
+  <script>
+  function getCookie(name) {
+  var value = "; " + document.cookie;
+  var parts = value.split("; " + name + "=");
+  if (parts.length == 2) {
+    return parts.pop().split(";").shift();
+  }
+  }
+
+  function setCookie(name, value, days) {
+  var expires = "";
+  if (days) {
+    var date = new Date();
+    date.setTime(date.getTime() + days * 24 * 60 * 60 * 1000);
+    expires = "; expires=" + date.toUTCString();
+  }
+  document.cookie = name + "=" + value + expires + "; path=/";
+  }
+
+  document.addEventListener("DOMContentLoaded", function() {
+  var cookieConsent = document.querySelector(".cookie-consent");
+  var overlay = document.createElement("div");
+  overlay.classList.add("overlay");
+
+  // Check if cookie is present
+  if (getCookie("cookie_consent") === "true") {
+    // Cookie is present, hide cookie consent banner
+    cookieConsent.style.display = "none";
+    // Enable scrolling
+    document.body.style.overflow = "auto";
+  } else {
+    // Cookie is not present, show cookie consent banner
+    cookieConsent.style.display = "block";
+    // Disable scrolling
+    document.body.style.overflow = "hidden";
+    // Add overlay
+    document.body.appendChild(overlay);
+  }
+
+  // Add event listener to consent button
+  document
+    .getElementById("consent-button")
+    .addEventListener("click", function() {
+      // Set cookie
+      setCookie("cookie_consent", "true", 365);
+      // Remove cookie consent banner
+      cookieConsent.style.display = "none";
+      // Remove overlay
+      document.body.removeChild(overlay);
+      // Enable scrolling
+      document.body.style.overflow = "auto";
+    });
+  });
+
+
+  </script>
+    <style>
+        .cookie-consent {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #d2f3ca;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+}
+    </style>
     <footer class="py-5 container">
         <div class="row">
             <div class="col">
