fix test for internationalization research

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <meta property="og:description" content=""/>
     <meta property="og:image" content="assets/images/logo.png"/>
     <meta property="og:url" content=""/>
-
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8RFD9BKS93"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-8RFD9BKS93'); </script>
 </head>
 
 <body class="pt-5">
