feature fixed share acessibility labels

--- a/src/content.html
+++ b/src/content.html
@@ -303,15 +303,30 @@
                     <div class="col-sm-3">
                         <h1>Share on Social Media</h1>
                         <ul class="nav">
-                            <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="#"><i
-                                    class="bi bi-linkedin me-2"></i></a></li>
-                            <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="#"><i
-                                    class="bi bi-twitter me-2"></i></a>
-                            </li>
-                            <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="#"><i
-                                    class="bi bi-facebook me-2"></i></a></li>
+<li class="nav-item mb-2">
+  <a aria-label="Share on LinkedIn" class="nav-link p-0 text-muted" href="https://linkedin.com/in/any">
+    <i class="bi bi-linkedin me-2"></i>
+    LinkedIn Profile
+  </a>
+</li>
+<li class="nav-item mb-2">
+  <a aria-label="Share on Twitter" class="nav-link p-0 text-muted" href="#">
+    <i class="bi bi-twitter me-2"></i>
+    Twitter Page
+  </a>
+</li>
+<li class="nav-item mb-2">
+  <a aria-label="Share on Facebook" class="nav-link p-0 text-muted" href="#">
+    <i class="bi bi-facebook me-2"></i>
+    Facebook Page
+  </a>
+</li>
+
+
+
                         </ul>
                     </div>
+
 
 
                     <div class="col-md-5 offset-md-1 mb-3">
