feature-fixed-li-list-accessibility

--- a/src/content.html
+++ b/src/content.html
@@ -289,15 +289,15 @@
                 <div class="row">
                     <div class="col">
                         <h1>About Us</h1>
-                        <ul class="nav flex-column">
-                            <li class="nav-item">
-                            <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="story.html">Our
-                                Story</a>
-                            </li>
-                            <a aria-current="page" class="nav-link mb-2 p-0 text-muted active" href="privacy.html">Privacy
-                                Policy</a>
-                            </li>
-                        </ul>
+<ul class="nav flex-column">
+  <li class="nav-item">
+    <a class="nav-link p-0 text-muted" href="story.html">Our Story</a>
+  </li>
+  <li class="nav-item mb-2">
+    <a aria-current="page" class="nav-link mb-2 p-0 text-muted active" href="privacy.html">Privacy Policy</a>
+  </li>
+</ul>
+
                     </div>
 
                     <div class="col-sm-3">
