UPDATED: index.html

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
     <!--Basic meta info -->
     <meta name="keywords" content="My Webclass Homepage">
-    <meta name="author" content="Keith Williams"/>
+    <meta name="authors" content="Suman S Mhalsank, Srinivas Bojja, Harshith Reddy"/>
     <meta name="description" content="A project to help educators integrate new technoliges into their teaching">
 
     <!--OpenGraph meta -->
