UPDATED: index.html

--- a/src/index.html
+++ b/src/index.html
@@ -69,8 +69,8 @@
                     </div>
                 </div>
                 <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                    <img class="rounded-lg-3 img-fluid" src="https://png.pngtree.com/png-vector/20230221/ourlarge/pngtree-little-kid-using-a-laptop-computer-png-image_6611521.png"
-                         alt="kid learning tech" width="720">
+                    <img class="rounded-lg-3 img-fluid" src="file:///Users/sumansmhalsank/Downloads/%E2%80%94Pngtree%E2%80%94a%20women%20is%20using%20laptop_3791899.png"
+                         alt="person learning tech" width="720">
                 </div>
             </div>
         </div>
