--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
     <!--Basic meta info -->
     <meta name="keywords" content="My Webclass Homepage">
-    <meta name="author" content="Keith Williams"/>
+    <meta name="authors" content="Suman S Mhalsank, Srinivas Bojja, Harshith Reddy"/>
     <meta name="description" content="A project to help educators integrate new technoliges into their teaching">
 
     <!--OpenGraph meta -->
@@ -21,7 +21,6 @@
     <meta property="og:url" content=""/>
 
 </head>
-
 <body class="pt-5">
 <div class="container-fluid">
     <header role="banner" class="fixed-top">
@@ -34,6 +33,18 @@
                     <span class="navbar-toggler-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Toggle navigation</span>
                 </button>
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" >Courses</a>
+                </li>
+                </ul>
+                <div class="search-container">
+                    <form action="/action_page.php">
+                         <input type="text" placeholder="Search.." name="search">
+                         <button type="submit"><i class="fa fa-search"></i></button>
+                    </form>
+                </div>
+
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -48,10 +59,9 @@
         <div class="container my-5">
             <div class="row p-4 pb-0 pe-lg-0 pt-lg-0 align-items-center rounded-3 border shadow-lg ">
                 <div class="col-lg-7 p-3 p-lg-3 pt-lg-1">
-                    <h1 class="display-6 fw-bold lh-1">Revolutionize your teaching</h1>
-                    <p class="lead">Empower your students with cutting-edge software engineering skills. Join
-                        MyWebClass and discover advanced technologies that will transform your teaching and their
-                        learning journey.</p>
+                    <h1 class="display-6 fw-bold lh-1">Techify Modern Learning</h1>
+                    <p class="lead">MyWebClass offers advanced technologies that can revolutionize and techify your teaching and your students' learning journey.
+                        Enroll now and gain access to cutting-edge software engineering skills to empower your students.</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
                         <button type="button" class="btn btn-success btn-lg px-4 me-md-2 fw-bold">Start
                             Here
@@ -59,8 +69,8 @@
                     </div>
                 </div>
                 <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                    <img class="rounded-lg-3 img-fluid" src="assets/images/teacher.gif"
-                         alt="a teacher with students" width="720">
+                    <img class="rounded-lg-3 img-fluid" src="file:///Users/sumansmhalsank/Downloads/%E2%80%94Pngtree%E2%80%94a%20women%20is%20using%20laptop_3791899.png"
+                         alt="person learning tech" width="720">
                 </div>
             </div>
         </div>
