CHANGED: The image source

--- a/src/index.html
+++ b/src/index.html
@@ -69,8 +69,8 @@
                     </div>
                 </div>
                 <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                    <img class="rounded-lg-3 img-fluid" src="file:///Users/sumansmhalsank/Downloads/%E2%80%94Pngtree%E2%80%94a%20women%20is%20using%20laptop_3791899.png"
-                         alt="person learning tech" width="720">
+                    <img class="rounded-lg-3 img-fluid" src="https://web-vdv.ru/files/pages/9873280a5dd01fdc38c012a06abe4db3.jpg"
+                         alt="girl using a laptop" width="720">
                 </div>
             </div>
         </div>
