Spanish support translation for i18next completed. Cleaned up and refactored JS further. * Additional 2 tests in support of latest changes. * Also moves Footer to its own shared footer file with JS modifications to support adding it to rendered page.

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
     <!--Basic meta info -->
     <meta name="keywords" content="My Webclass Homepage" />
     <meta name="author" content="Arly Volmar | Dina Lahham | Nathan Hernandez" />
-    <meta name="description" content="A project to help educators integrate new technoliges into their teaching" />
+    <meta name="description" content="A project to help educators integrate new technologies into their teaching" />
 
     <!--OpenGraph meta -->
     <meta property="og:title" content="" />
@@ -73,7 +73,7 @@
               <h1 class="display-6 fw-bold lh-1" data-i18n="index.intro-heading">
                 Empowering Educators for a Digital World
               </h1>
-              <p class="lead">
+              <p class="lead" data-i18n="index.lead-text">
                 MyWebClass is a website providing accessible resources to educators teaching modern technology, to their
                 students. Join today and discover the ways our website can transform your teaching, and help you
                 confidently prepare students for successful futures in the digital age.
@@ -94,60 +94,9 @@
           </div>
         </div>
       </main>
-      <footer class="py-5 container">
-        <div class="row">
-          <div class="col">
-            <h1>About Us</h1>
-            <ul class="nav flex-column">
-              <li class="nav-item mb-2">
-                <a href="story.html" class="nav-link p-0 text-muted" aria-label="Our Story Link">Our Story</a>
-              </li>
-              <li class="nav-item mb-2">
-                <a
-                  class="nav-link p-0 text-muted active"
-                  aria-current="page"
-                  href="privacy.html"
-                  aria-label="Privacy Policy Link"
-                  >Privacy Policy</a
-                >
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-sm-3">
-            <h1>Share on Social Media</h1>
-            <ul class="nav">
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted" aria-label="LinkedIn Link"
-                  ><i class="bi bi-linkedin me-2"></i
-                ></a>
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted" aria-label="Twitter Link"
-                  ><i class="bi bi-twitter me-2"></i
-                ></a>
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted" aria-label="Facebook Link"
-                  ><i class="bi bi-facebook me-2"></i
-                ></a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-md-5 offset-md-1 mb-3">
-            <form>
-              <h1>Subscribe to our newsletter</h1>
-              <p>Monthly digest of what's new and exciting from us.</p>
-              <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-                <label for="newsletter1" class="visually-hidden">Email address</label>
-                <input id="newsletter1" type="text" class="form-control" placeholder="Email address" />
-                <button class="btn btn-primary" type="button">Subscribe</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </footer>
+      <!-- Shared Footer -->
+      <!-- Nit and TODO: Transition this to use something like React for better component reuse and scaling -->
+      <div id="main-footer"></div>
     </div>
   </body>
 </html>
