--- a/src/content.html
+++ b/src/content.html
@@ -69,8 +69,10 @@
             <div class="row align-items-center">
               <div class="col-auto text-start">
                 <ol class="breadcrumb my-0">
-                  <li class="breadcrumb-item"><a href="./">Home</a></li>
-                  <li aria-current="page" class="breadcrumb-item active">Content Template</li>
+                  <li class="breadcrumb-item"><a href="./" data-i18n="breadcrumbs.head-link-crumb">Home</a></li>
+                  <li aria-current="page" class="breadcrumb-item active" data-i18n="breadcrumbs.content-template-crumb">
+                    Content Template
+                  </li>
                 </ol>
               </div>
             </div>
@@ -83,7 +85,7 @@
           <!-- Table of Contents (TOC) menu with scrollspy -->
           <nav class="col-md-2 col-lg-2 d-md-block bg-light sidebar collapse position-fixed" id="toc_menu">
             <div class="position-sticky pt-3">
-              <h2 class="justify-left">Navigation</h2>
+              <h2 class="justify-left" data-i18n="content-page.sidebar-heading-text">Navigation</h2>
               <!-- Javascript builds out the navigation items -->
             </div>
           </nav>
@@ -91,7 +93,7 @@
           <!-- Main content area -->
           <main class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
             <section id="title">
-              <h1 class="fw-bold border-bottom">Article Title</h1>
+              <h1 class="fw-bold border-bottom" data-i18n="content-page.main-content-heading">Article Title</h1>
               <div class="text-muted mb-3">
                 By: Dina Lahham | Arly Volmar | Nathan Hernandez | ChatGPT
                 <span class="text-muted me-3"> Last Updated: March 21, 2023</span>
@@ -99,7 +101,7 @@
               </div>
             </section>
             <section id="section2">
-              <h2>Section 2</h2>
+              <h2 data-i18n="content-page.section2-heading">Section 2</h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus nibh
                 dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur risus
@@ -174,7 +176,7 @@
               </p>
             </section>
             <section id="section3">
-              <h2>Section 3</h2>
+              <h2 data-i18n="content-page.section3-heading">Section 3</h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus nibh
                 dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur risus
@@ -218,7 +220,7 @@
                 luctus est. Donec efficitur, sapi
               </p>
             </section>
-            <section id="section4">
+            <section id="section4" data-i18n="content-page.section4-heading">
               <h2>Section 4</h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus nibh
@@ -258,61 +260,9 @@
               </p>
             </section>
           </main>
-
-          <footer class="py-5 container">
-            <div class="row">
-              <div class="col">
-                <h1>About Us</h1>
-                <ul class="nav flex-column">
-                  <li class="nav-item mb-2">
-                    <a class="nav-link p-0 text-muted" href="story.html" aria-label="Our Story Link">Our Story</a>
-                  </li>
-                  <li class="nav-item mb-2">
-                    <a
-                      aria-current="page"
-                      class="nav-link p-0 text-muted active"
-                      href="privacy.html"
-                      aria-label="Privacy Policy Link"
-                      >Privacy Policy
-                    </a>
-                  </li>
-                </ul>
-              </div>
-
-              <div class="col-sm-3">
-                <h1>Share on Social Media</h1>
-                <ul class="nav">
-                  <li class="nav-item mb-2">
-                    <a class="nav-link p-0 text-muted" href="#" aria-label="LinkedIn Link"
-                      ><i class="bi bi-linkedin me-2"></i
-                    ></a>
-                  </li>
-                  <li class="nav-item mb-2">
-                    <a class="nav-link p-0 text-muted" href="#" aria-label="Twitter Link"
-                      ><i class="bi bi-twitter me-2"></i
-                    ></a>
-                  </li>
-                  <li class="nav-item mb-2">
-                    <a class="nav-link p-0 text-muted" href="#" aria-label="Facebook Link"
-                      ><i class="bi bi-facebook me-2"></i
-                    ></a>
-                  </li>
-                </ul>
-              </div>
-
-              <div class="col-md-5 offset-md-1 mb-3">
-                <form>
-                  <h1>Subscribe to our newsletter</h1>
-                  <p>Monthly digest of what's new and exciting from us.</p>
-                  <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-                    <label class="visually-hidden" for="newsletter1">Email address</label>
-                    <input class="form-control" id="newsletter1" placeholder="Email address" type="text" />
-                    <button class="btn btn-primary" type="button">Subscribe</button>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </footer>
+          <!-- Shared Footer -->
+          <!-- Nit and TODO: Transition this to use something like React for better component reuse and scaling -->
+          <div id="main-footer"></div>
         </div>
       </div>
     </div>
