Language tag typo corrections.

--- a/src/content.html
+++ b/src/content.html
@@ -69,7 +69,7 @@
             <div class="row align-items-center">
               <div class="col-auto text-start">
                 <ol class="breadcrumb my-0">
-                  <li class="breadcrumb-item"><a href="./" data-i18n="breadcrumbs.head-link-crumb">Home</a></li>
+                  <li class="breadcrumb-item"><a href="./" data-i18n="breadcrumbs.home-link-crumb">Home</a></li>
                   <li aria-current="page" class="breadcrumb-item active" data-i18n="breadcrumbs.content-template-crumb">
                     Content Template
                   </li>
@@ -220,8 +220,8 @@
                 luctus est. Donec efficitur, sapi
               </p>
             </section>
-            <section id="section4" data-i18n="content-page.section4-heading">
-              <h2>Section 4</h2>
+            <section id="section4">
+              <h2 data-i18n="content-page.section4-heading">Section 4</h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor augue massa, ac maximus nibh
                 dapibus vel. Nulla luctus, magna at pulvinar tincidunt, massa lacus iaculis risus, nec efficitur risus
