--- a/src/mainNavigation.html
+++ b/src/mainNavigation.html
@@ -30,7 +30,7 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="privacy.html" aria-label="Privacy Policy Link" data-18n="navigation.privacy-link"
+          <a class="nav-link" href="privacy.html" aria-label="Privacy Policy Link" data-i18n="navigation.privacy-link"
             >Privacy Policy</a
           >
         </li>
