--- a/src/story.html
+++ b/src/story.html
@@ -85,7 +85,7 @@
           <!-- Sidebar menu with scrollspy -->
           <nav class="col-md-2 col-lg-2 d-md-block bg-light sidebar collapse position-fixed" id="toc_menu">
             <div class="position-sticky pt-3">
-              <h2 class="justify-left" data-i18n="sidebar-heading-text">Navigation</h2>
+              <h2 class="justify-left" data-i18n="story-page.sidebar-heading-text">Navigation</h2>
               <!-- Javascript builds out the navigation items -->
             </div>
           </nav>
