Refactors to add a Work-In-Progress Modal where needed for features not fully implemented. * First use was in the Newsletter Subscribe Button feature (which is pending development) * Adds additional tests for internationalization and social media, bringing our tests to 40 * Refactors allPages.js and main.js to account for above.

--- a/src/mainFooter.html
+++ b/src/mainFooter.html
@@ -49,7 +49,14 @@
             >Email address</label
           >
           <input id="newsletter1" type="text" class="form-control" placeholder="Email address" />
-          <button class="btn btn-primary" type="button" data-18n="newsletter-subscribe-form-btn">Subscribe</button>
+          <button
+            id="newsletterSubscribeBtn"
+            class="btn btn-primary"
+            type="button"
+            data-18n="newsletter-subscribe-form-btn"
+          >
+            Subscribe
+          </button>
         </div>
       </form>
     </div>
