--- a/src/mainNavigation.html
+++ b/src/mainNavigation.html
@@ -51,8 +51,8 @@
             <span data-i18n="navigation.language">Language</span>
           </a>
           <ul class="dropdown-menu" aria-labelledby="languageDropdown">
-            <li><a class="dropdown-item" href="#" onclick="changeSiteLanguage('en')">English</a></li>
-            <li><a class="dropdown-item" href="#" onclick="changeSiteLanguage('es')">Español</a></li>
+            <li><a id="englishOption" class="dropdown-item" href="#" onclick="changeSiteLanguage('en')">English</a></li>
+            <li><a id="spanishOption" class="dropdown-item" href="#" onclick="changeSiteLanguage('es')">Español</a></li>
           </ul>
         </li>
       </ul>
