--- a/src/index.html
+++ b/src/index.html
@@ -20,12 +20,26 @@
     <meta property="og:image" content="assets/images/logo.png"/>
     <meta property="og:url" content=""/>
 
+     <!-- Add Custom CSS -->
+    <link href="./css/main.css" rel="stylesheet" type="text/css"/>
+     <!-- Add Bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Add jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- Add Popper.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+    <!-- Add Bootstrap JS -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </head>
 
 <body class="pt-5">
-<div class="container-fluid">
+<div class="container-fluid bg-dark-custom-1">
     <header role="banner" class="fixed-top">
-        <nav role="navigation" aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav role="navigation" aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark-custom">
             <div class="container">
                 <a class="navbar-brand" href="/">MyWebClass.org</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -45,21 +59,23 @@
         </nav>
     </header>
     <main>
-        <div class="container my-5">
-            <div class="row p-4 pb-0 pe-lg-0 pt-lg-0 align-items-center rounded-3 border shadow-lg ">
+        <div class="container pd-5">
+            <div class="row p-4 pb-0 pe-lg-0 align-items-center rounded-3 border border-round shadow-lg ">
                 <div class="col-lg-7 p-3 p-lg-3 pt-lg-1">
                     <h1 class="display-6 fw-bold lh-1">Revolutionize your teaching</h1>
                     <p class="lead">Empower your students with cutting-edge software engineering skills. Join
                         MyWebClass and discover advanced technologies that will transform your teaching and their
                         learning journey.</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
+                        <a href="get_started.html">
                         <button type="button" class="btn btn-success btn-lg px-4 me-md-2 fw-bold">Start
                             Here
                         </button>
+                        </a>
                     </div>
                 </div>
                 <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                    <img class="rounded-lg-3 img-fluid" src="assets/images/teacher.gif"
+                    <img class="rounded-lg-3 img-fluid" src="assets/images/hero-main.jpg"
                          alt="a teacher with students" width="720">
                 </div>
             </div>
@@ -83,9 +99,9 @@
             </div>
 
             <div class="col-sm-3 ">
-                <h5>Share on Social Media</h5>
+                <h5>Connect on Instagram</h5>
                 <ul class="nav">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
+                    <li class="nav-item mb-2"><a href="https://www.instagram.com/njit/?hl=en" class="nav-link p-0 text-muted">NJIT<i
                             class="bi bi-linkedin me-2"></i></a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
                             class="bi bi-twitter me-2"></i></a>
@@ -101,7 +117,6 @@
                     <h5>Subscribe to our newsletter</h5>
                     <p>Monthly digest of what's new and exciting from us.</p>
                     <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-                        <label for="newsletter1" class="visually-hidden">Email address</label>
                         <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
                         <button class="btn btn-primary" type="button">Subscribe</button>
                     </div>
