--- a/src/index.html
+++ b/src/index.html
@@ -74,9 +74,8 @@
             </div>
         </div>
     </main>
-
 <div class="cookie-consent">
-    <p>This website uses cookies to improve your experience. By clicking <b>Agree</b>, you consent to our use of cookies in accordance with our <a href="privacy_policy.html">Privacy Policy</a>.</p><button id="consent-button"> I Agree</button>
+    <p>This website uses cookies to improve your experience. By clicking <b>Agree</b>, you consent to our use of cookies in accordance with our <a href="privacy.html">Privacy Policy</a>.</p><button id="consent-button"> I Agree</button>
   </div>
   <script>
       var cookieConsent = document.querySelector('.cookie-consent');
