--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,15 @@
 <head>
     <!--characterset UTF-8 Watch this: https://youtu.be/MijmeoH9LT4 -->
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5KZZ1FSVYL"></script>
+    <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+     gtag('config', 'G-5KZZ1FSVYL');
+    </script>
+
     <title>MyWebClass.org</title>
     <meta charset="UTF-8">
 
