--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,39 @@ cookieAccept.addEventListener('click', function() {
   localStorage.setItem('cookie-consent', true);
   cookieConsent.classList.remove('show');
 });
+document.getElementById("consent-button").addEventListener("click", function() {
+  setCookie("cookie_consent", "true", 365);
+  hideCookieConsent();
+});
+function setCookie(name, value, days) {
+  var expires = "";
+  if (days) {
+    var date = new Date();
+    date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+    expires = "; expires=" + date.toUTCString();
+  }
+  document.cookie = name + "=" + encodeURIComponent(value) + expires + "; path=/";
+}
+
+function hideCookieConsent() {
+  document.querySelector(".cookie-consent").style.display = "none";
+}
+document.addEventListener("DOMContentLoaded", function() {
+  var cookieConsent = document.querySelector(".cookie-consent");
+  if (getCookie("cookie_consent") === "true") {
+    hideCookieConsent();
+  } else {
+    cookieConsent.style.display = "block";
+  }
+});
+
+function getCookie(name) {
+  var value = "; " + document.cookie;
+  var parts = value.split("; " + name + "=");
+  if (parts.length === 2) {
+    return decodeURIComponent(parts.pop().split(";").shift());
+  }
+}
   </script>
     <style>
         .cookie-consent {
