--- a/src/content.html
+++ b/src/content.html
@@ -44,7 +44,7 @@
                     </button>
             <div class = "collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item active></li>
+                    <li class="nav-item active"></li>
                     <li class="nav-item dropdown"></li>
                 </ul>
                 <form class="d-flex ms-auto">
