--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,9 @@
                 <li class="nav-item">
                     <a class="nav-link" >Courses</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" >Practice</a>
+                </li>
                 </ul>
                 <div class="search-container">
                     <form action="/action_page.php">
