--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,9 @@
                 <li class="nav-item">
                     <a class="nav-link" >Practice</a>
                 </li>
+	            <li class="nav-item">
+                    <a class="nav-link" >Explore</a>
+                </li>
                 </ul>
                 <div class="search-container">
                     <form action="/action_page.php">
