--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,13 @@
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZM3JHV2M6P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZM3JHV2M6P');
+</script>
+
 <!DOCTYPE html>
 <html lang="EN">
 
